@@ -1,6 +1,7 @@
 Revision history for App-Pocoirc
 
 {{$NEXT}}
+    - In the config, keep networks in a hash, not an array
 
 0.24  Tue Sep 28 08:50:10 GMT 2010
     - Sort the plugin list emitted by -L
